--- a/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
+++ b/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.html
@@ -99,10 +99,9 @@
       </div>
 
       <div class="col-xs-2">
-        <clr-date-container>
-          <input type="date" clrDate name="fechaInicio" [(ngModel)]="fechaInicio"
-                 min="2000-01-01" max="2030-12-31" required>
-        </clr-date-container>
+        <input type="date" name="fechaInicio" [(ngModel)]="fechaInicio"
+               placeholder="dd-mm-yyyy"
+               min="1990-01-01" max="2050-12-31" required>
       </div>
     </div>
     <div class="form-group row flex-items-xs-left">
@@ -110,10 +109,9 @@
         <label class="form-edit-contrato-label required">Finalización:</label>
       </div>
       <div class="col-xs-2">
-        <clr-date-container>
-          <input type="date" clrDate name="fechaFin" [(ngModel)]="fechaFin"
-                 min="2000-01-01" max="2030-12-31" required>
-        </clr-date-container>
+        <input type="date" name="fechaFin"  [(ngModel)]="fechaFin"
+               placeholder="dd-mm-yyyy"
+               min="1990-01-01" max="2050-12-31" required>
       </div>
     </div>
 
@@ -190,4 +188,3 @@
     </button>
   </section>
 </form>
-
