--- a/client-app/src/app/home/mantenimiento/orden-trabajo/lista-orden-trabajo/lista-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/lista-orden-trabajo/lista-orden-trabajo.component.html
@@ -88,7 +88,7 @@
       <clr-dg-cell class="table-column">{{ordenTrabajo.estado}}</clr-dg-cell>
       <clr-dg-cell class="table-column">{{ordenTrabajo.tipoServicio}}</clr-dg-cell>
       <clr-dg-cell class="table-column">{{ordenTrabajo.diagnostico}}</clr-dg-cell>
-      <clr-dg-cell class="table-column">{{ordenTrabajo.equipo?.numeroSerie}} - {{ordenTrabajo.equipo?.descripcionEquipo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{ordenTrabajo.equipo?.numeroSerie}}  {{ordenTrabajo.equipo?.descripcionEquipo}}</clr-dg-cell>
     </clr-dg-row>
 
     <clr-dg-footer>
@@ -98,4 +98,3 @@
     </clr-dg-footer>
   </clr-datagrid>
 </form>
-
