--- a/client-app/src/app/home/mantenimiento/repuestos/lista-repuestos/lista-repuestos.component.html
+++ b/client-app/src/app/home/mantenimiento/repuestos/lista-repuestos/lista-repuestos.component.html
@@ -32,7 +32,7 @@
             <div class="col-4">
               <div class="select form-control">
                 <select class="select-form-repuesto" id="selectTipo" #selectedTipo name="selectTipo"
-                        [(ngModel)]="tipoId">
+                        [(ngModel)]="tipoId" (change)="onSelectedTipo(selectedTipo.value)">
                   <option>Filtrar por Tipo</option>
                   <option *ngFor="let tipo of tipos"
                           value={{tipo.id}}>{{tipo.tipo}}
@@ -50,7 +50,8 @@
             <div class="col-4">
               <div class="select form-control">
                 <select class="select-form-repuesto" id="selectModelo" #selectedModelo
-                        name="selectModelo" [(ngModel)]="modeloId">
+                        name="selectModelo" [(ngModel)]="modeloId"
+                        (change)="onSelectedMarcaModelo(selectedModelo.value)">
                   <option>Filtrar por Marca/Modelo</option>
                   <option *ngFor="let modelo of modelos"
                           value={{modelo.id}}>{{modelo.marca}}/{{modelo.modelo}}
